[package]
name = "bus_factor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
# Unstable, but contains derive feature
# clap = { version = "3.0.0-rc.5", features=["derive"] }

reqwest = { version="0.11.7", features=["blocking"] }