[package]
name = "bus_factor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
# Unstable, but contains derive feature
# clap = { version = "3.0.0-rc.5", features=["derive"] }

reqwest = { version = "0.11.7", features= ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = "1.0.73"
serde = { version="1.0.132", features=["derive"]}
log = "0.4.14"
env_logger = "0.9.0"
assert_approx_eq = "1.1.0"
